sumo/tests/sumo/spec/flow/errors/period_per_hour/rawdump.sumo
<?xml version="1.0"?>

<!-- generated on 02/08/10 10:11:33 by SUMO sumo Version dev-SVN-r8225
<configuration>

    <input>
        <net-file value="net.net.xml"/>
        <additional-files value="input_routes.rou.xml,input_additional.add.xml"/>
    </input>

    <output>
        <netstate-dump value="rawdump.xml"/>
    </output>

    <time>
        <begin value="0"/>
        <end value="1"/>
    </time>

    <report>
        <no-duration-log value="true"/>
        <no-step-log value="true"/>
    </report>

</configuration>
-->

<sumo-netstate>
</sumo-netstate>
